[MSE] ArrowDataBlock: implement MV getBytesArray/getBigDecimalArray accessors
The master merge brought in apache/pinot#18326 ("Support MV BIG_DECIMAL and
BYTES"), which added ByteArray[] getBytesArray(int,int) and
BigDecimal[] getBigDecimalArray(int,int) to the DataBlock interface. ArrowBlock
doesn't materialize array columns yet, so stub both with
UnsupportedOperationException, matching the other MV accessors
(getIntArray/getStringArray/...). Required for ArrowDataBlock to compile against
the post-merge interface.